@startuml metrics_logger_class_diagram

package metrics {
  class MetricsApp {}

  package metrics_logger {
    package writers {
      interface LoggerWriter {
        + writeError(Object error, [StackTrace stackTrace]) : FutureOr<void>
        + setContext(String key, dynamic context) : FutureOr<void>
      }
    }

    class MetricsLogger {
      - //static// _loggerWriter : LoggerWriter
      + //static// initialize(LoggerWriter loggerWriter,  Map<String, dynamic> contexts) : Future<void>
      + //static// logError(Object error, [StackTrace stackTrace]) : Future<void>
      + //static// setContext(String key, dynamic context) : Future<void>
    }
  }
}

MetricsApp --> MetricsLogger : uses
MetricsLogger --> LoggerWriter : uses

@enduml
